--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "igreja_lar",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html src/styles/main.scss src/scripts/main.js",
@@ -17,5 +16,6 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.0"
-  }
+  },
+  "description": ""
 }
